# agent-orchestration-course-t2

./: .env-example  .env.example  .gitignore  CLAUDE.md  README.md  analyze_results.py  main.py  orchestrator.py  pyproject.toml  run.ps1  run_all_ollama.ps1
.claude/agents/: debate-agent.md  debate-judge.md  debate-orchestrator.md
config/: rate_limits.json  setup.json
docs/: ARCHITECTURE.md  AUDIT.md  CHANGELOG_COURSE_FIXES.md  PLAN.md  PRD.md  PRD_agents.md  PRD_backends.md  PRD_orchestrator.md  Replan.md  SUBMISSION_CHECKLIST.md  TDD.md  TEST_PLAN.md  TODO.md  analysis.md  cost.md  hw1_lessons_learned.md  rules.md
examples/: analysis.md  cost-claude-api.md  debate-config.example.json  run.ps1  topics.md
examples/ai-jobs/: config-claude-api-sonnet.json  config-claude-api.json  config-claude-cli.json  config-ollama-api.json  config-ollama-cli-agents.json  config-ollama-cli.json
examples/configs/: ai-jobs.json  iran-nuclear.json  messi-ronaldo.json  nuclear-energy.json  social-media.json  ubi.json
examples/iran-nuclear/: config-claude-api-sonnet.json  config-claude-api.json  config-claude-cli.json  config-ollama-api.json  config-ollama-cli-agents.json  config-ollama-cli.json  config.json
examples/messi-ronaldo/: config-claude-api-sonnet.json  config-claude-api.json  config-claude-cli.json  config-ollama-api.json  config-ollama-cli-agents.json  config-ollama-cli.json
notebooks/: analysis.ipynb
src/: backends.py  config.py  constants.py  cost.py  debate_helpers.py  exceptions.py  logger.py  output.py  protocol_validator.py  stance_validator.py  state.py  topic_validator.py  validation_result.py  validator.py  verdict_validator.py  watchdog.py
src/agents/: base.py  debate.py  judge.py  loader.py
(+136 files in other folders)
