[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-debate-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0,<0.100.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.0.0",
]
ollama = [
    "requests>=2.31.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--html=reports/test_report.html --self-contained-html"

[tool.coverage.run]
source = ["src", "orchestrator"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 85

[tool.coverage.html]
directory = "reports/coverage"
